# roadscene2vec

./: .gitignore  README.md  pyproject.toml
examples/: use_case_1_scenegraph_extraction_config.yaml
roadscene2vec/config/: scenegraph_extraction_config.yaml
roadscene2vec/scene_graph/: scene_graph.py
roadscene2vec/scene_graph/extraction/: detectors.py  image_extractor.py
roadscene2vec/util/: visualizer.py
